# afr_name_generator_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
ang/: __init__.py  __main__.py  ang.py  cli.py  config.py  database.py  presenter.py
ang/database/: database.py  schema.py
ang/database/presets/: default_database.py  empty_database.py
tests/: test_ang.py
todo/: README.md
