[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "afr-name-generator-cli"
version = "0.1.0"
description = "A Typer CLI for storing Afrikaans names and surnames and generating random combinations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["schema>=0.7,<1.0", "typer>=0.12,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ang = "ang.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ang*"]
namespaces = true
