[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "afr-name-generator-cli"
version = "0.1.0"
description = "A Typer CLI for storing Afrikaans names and surnames and generating random combinations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["schema>=0.7,<1.0", "typer>=0.12,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0"]

[project.scripts]
ang = "ang.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["."]
include = ["ang*"]
namespaces = true
